# UoA_MSDS_projects

capstone1-ad-recommender-system/: .gitignore  Dockerfile  README.md  ad_rec_streamlit.py  app.py  pyproject.toml
capstone1-ad-recommender-system/aws-deploy/: .env.example  cleanup-access-permissions.sh  ec2-s3-policy.template.json  ec2_bootstrap.template.sh  setup-access-permissions.sh  setup-security-group.sh  start-ec2-instance.sh
capstone1-ad-recommender-system/colab-notebooks/: Task1.1+2+3_Read_Clean_EDA.ipynb  Task1.4_Advance_visualization_and_clustering.ipynb  Task1.5_Model_building.ipynb  Task1.6_Model_Evaluation.ipynb
capstone1-ad-recommender-system/data/: age_label_encoder.pickle  age_model_sc1_fit.pickle  age_model_sc2_fit.pickle  gender_label_encoder.pickle  gender_model_sc1_fit.pickle  gender_model_sc2_fit.pickle  input_processor.pickle
capstone1-ad-recommender-system/templates/: base.html  index.html  prediction.htmx.html
capstone1-ad-recommender-system/test/: test_process_input.py
