[tool.poetry]
name = "ad-recommender-flask"
version = "0.1.0"
description = "UoA Capstone Project 1 - Ad Recommender System"
authors = ["Vu Truong <forbidden.gun@gmail.com>"]

[tool.poe.tasks]
dev.shell = "flask run --debug"
streamlit-run.shell = "streamlit run ad_rec_streamlit.py"
docker-run.shell = "docker build -t ad-rec-flask:latest . && docker run --rm -d -p 8000:8000 --name ad-rec-flask ad-rec-flask:latest"
docker-stop.shell = "docker stop ad-rec-flask"
docker-log.shell = "docker logs ad-rec-flask"
test.shell = "pytest -s -v"
ruff-fix.shell = "ruff format ."

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<3.11"
flask = "^3.0.0"
pandas = "1.5.3"
scikit-learn = "1.2.2"
dill = "^0.3.7"
typing-extensions = "^4.8.0"
xgboost = "^2.0.2"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
poethepoet = "^0.13.1"
ruff = "^0.1.5"
icecream = "^2.1.3"
streamlit = "^1.28.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
